# vanilla-neuralnetwork

./: .gitignore  README.md  p3.py  p4.py  p4_layer.py  p4_layer_obj.py  p5.ipynb  pyproject.toml  requirements.txt
simplified_examples/: p1.py  p2.py  p3_numpy.py  p5.py  p5_simple_relu.py  p6.py  p6_batch.py  p6_full.py  p6_numpy.py  p7_log.py  p7_onehot_encode.py  p8_full.py  p8_simple.py
src/vanilla_neural_network/: run_model.py
src/vanilla_neural_network/activation/: relu.py  softmax.py
src/vanilla_neural_network/layer/: dense.py
src/vanilla_neural_network/loss/: categoricalLossEntropy.py
